# Autonome_Robotter

./: .gitignore  Qt.gitignore  README.md  Test1.docx  evo.txt
ATMega/: CodeTest3.cpp  (+2 more)
Checker/: CMakeCache.txt  CMakeLists.txt  Qt.gitignore  boardUpdate.h  build.ninja  cmake_install.cmake  main  main.cpp  playerInput.h  qtcsettings.cmake  validMoves.h
Checker/V1.0/: AllFiles.h  Atmega.cpp  AtmegaCom.cpp  AtmegaCom.h  BoardUpdate.cpp  CMakeLists.txt  CheckersDatabase.cpp  CheckersDatabase.h  ComputerVision.cpp  FunktionerTilDatabase.cpp  ValidMoves.cpp  alphabeta.cpp  alphabeta.h  boardUpdate.h  computerPos.cpp  computerPos.h  computerVision.h  main.cpp  main2.cpp  mainfunctions.cpp  mainfunctions.h  matrix.cpp  matrix.h  playerInput.h  qa.hpp  robot.cpp  robot.h  robotMove.cpp  robotMove.h  validMoves.h  validmoves.cpp  validmoves.h  vision.cpp  vision.h
Checker/build-V1.0-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  main  qtcsettings.cmake
Checker/build-V1.0-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-abd4b0055f31cb5f961f.json  cmakeFiles-v1-9dfa2c38aa55d0950670.json  cmakeFiles-v1-c5408df26719e6dddc63.json  codemodel-v2-1a7ad6db0550c6c7993a.json  codemodel-v2-400dbc57059a280adb4f.json  codemodel-v2-7e71d39bd359623e3ec3.json  codemodel-v2-bb45b73acfd058e3da5b.json  directory-.-Debug-a194087e3dddde36cd25.json  index-2024-03-14T19-14-27-0354.json  index-2024-03-15T08-32-07-0020.json  index-2024-03-19T11-12-10-0532.json  index-2024-03-20T09-42-41-0680.json  index-2024-04-12T14-33-10-0560.json  index-2024-04-18T06-48-45-0904.json  target-main-Debug-144e4f1deec0d22ae498.json  target-main-Debug-2b1803b9931f14cb93d7.json  target-main-Debug-6afeba3d0960c9e670dd.json  target-main-Debug-a6e59761bd1a951ce92a.json  target-main-Debug-f06969332f7eb06b132c.json
Checker/build-V1.0-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-59aadd971daeb51ca41e.json  cache-v2-734d2f9c11a96960fe32.json  cache-v2-eb8f23551bf69c2a926f.json  cmakeFiles-v1-4be80c3107af8155995c.json  cmakeFiles-v1-80c32cf0caf09a487249.json  cmakeFiles-v1-b2a64cb087689e658c72.json  cmakeFiles-v1-baa7345a433d39225c44.json  codemodel-v2-2b6608c4a9002f797506.json  codemodel-v2-4e5dfa55818fe16a8dcc.json  codemodel-v2-75e43d67af30ffa5a8a3.json  codemodel-v2-7c7f1d1b6dd3daefaada.json  codemodel-v2-d8b55b3532bf92fafea8.json  index-2024-03-15T08-30-56-0726.json  index-2024-03-18T11-15-49-0951.json  index-2024-03-20T09-37-57-0369.json  index-2024-04-08T12-28-55-0661.json  index-2024-04-18T05-12-19-0234.json  target-main-Debug-2fbdd376592c13457d6d.json  target-main-Debug-9c9d8568cdd1fed678ed.json  target-main-Debug-c962d319177d5908347c.json  target-main-Debug-d6d34b1b9f9819a3e6dc.json
Checker/build-V1.0-Desktop-Debug/.qtc_clangd/: compile_commands.json
Checker/build-V1.0-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: AllFiles.h.83A503502AD01D10.idx  Atmega.cpp.58A699EE6395D3D1.idx  AtmegaCom.h.32BB501EBE90030A.idx  AtmegaCom.h.41C53E637F8F06D5.idx  BoardUpdate.cpp.9E347861DB8515B3.idx  CheckersDatabase.h.0077DF95925FA8F5.idx  ComputerVision.cpp.A093D55C65DA160A.idx  FunktionerTilDatabase.cpp.03B18915D1A01084.idx  O1_size.hpp.44D45742DA06622E.idx  O1_size.hpp.DABF0C39338D338D.idx  O1_size_fwd.hpp.B63FC443B3F79081.idx  O1_size_impl.hpp.A1B7A27ECF8656E2.idx  QCoreApplication.D627A22A5591DCC8.idx  QDeadlineTimer.0616CE6D9F2B00C5.idx  QObject.27A5D8C4750CD43D.idx  QSqlDatabase.CDB1C0E7EFEFD2DC.idx  QStringList.030B15CB24914AC2.idx  QtCore.E56BB80C15AFD366.idx  QtCoreDepends.3EF25789779907A5.idx  QtSql.D277BEC9BE2E2FD7.idx  QtSqlDepends.18534F63EF606E2A.idx  ValidMoves.cpp.56AEF1742BDF8A46.idx  __sigval_t.h.4EE558E3F2780E3A.idx  __stddef_max_align_t.h.C10B042EFE3672E1.idx  add.hpp.EDEAB21B4E3CDC1C.idx  add_const.hpp.16C81EDC89BF8A97.idx  add_lvalue_reference.hpp.593E55937B263B47.idx  add_pointer.hpp.71EF0EACE45EB7C0.idx  add_reference.hpp.7D44B2E46ACA0CB5.idx  add_rvalue_reference.hpp.4CD12C64DC46B8F8.idx  add_volatile.hpp.01FAE3C1E14A700E.idx  address.hpp.1D32E8D386D5A840.idx  address.hpp.BB2CED91CB0257A7.idx  address.ipp.BF3CBAEBF4EF1504.idx  address_v4.hpp.93F2D39E09C662BA.idx  address_v4.hpp.B4FE660E71CB77F1.idx  address_v4.ipp.830A9E4C03E90A9C.idx  address_v6.hpp.0FEA7367A48369AF.idx  address_v6.hpp.1F21CE277F49FC80.idx  address_v6.ipp.F6D26C475FF7A8F1.idx  (+1299 more)
Checker/build-V1.0-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  main  qtcsettings.cmake
Checker/build-V1.0-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-5f30c1f10f08e060a755.json  cache-v2-7465c366c5c5a6a3035d.json  (+21 more)
Checker/build-V1.0-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-66cf7dfbf2407ee2529f.json  cmakeFiles-v1-54323a287a6ef064f702.json  cmakeFiles-v1-8b1fe4ddf4b3cb5f2e4c.json  codemodel-v2-8bf76c1b14aebb47b73a.json  codemodel-v2-e165389401be2295b23b.json  directory-.-Debug-db08dd53ef7dff36b07c.json  index-2024-03-07T07-28-01-0179.json  index-2024-03-07T07-40-44-0145.json  index-2024-03-18T14-58-46-0107.json  index-2024-04-09T10-08-20-0814.json  index-2024-04-09T10-10-06-0327.json  target-main-Debug-0cb375e39890059339ac.json  target-main-Debug-503ff75934b72807c437.json  target-main-Debug-583e9d93bd9ce9ea9c20.json  target-main-Debug-784c7ff7f3f555ac2b17.json  target-main-Debug-8e90527c1f4c9f3f435b.json  target-main-Debug-aa8036642cb505f9a229.json
Checker/build-V1.0-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
ComputerVision_versions/Computervision v1.0/: CMakeLists.txt  main.cpp  qa.hpp
ComputerVision_versions/LiveFeed/liveExternalCam/: CMakeLists.txt  CMakeLists.txt.user.dc46252  main.cpp
GUI/GUI VERSIONS/V 1.0/: CMakeLists.txt  main.cpp
GUI/GUI VERSIONS/V3.5/: AtmegaCom.cpp  AtmegaCom.h  BoardUpdate.cpp  CMakeLists.txt  DrawFunctions.h  GameFunctions.h  alphabeta.cpp  alphabeta.h  checkersdatabase.cpp  checkersdatabase.h  main.cpp  matrix.cpp  matrix.h  robot.cpp  robot.h  validMoves.h  validmoves.cpp  validmoves.h  vision.cpp  vision.h
(+1592 files in other folders)
